--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ a:hover {
 
 body {
   bottom: 0;
-  font-family: "Titillium Web", sans-serif;
-  color: white;
+  font-family: "Major Mono Display", sans-serif;
+  color: rgba(122, 122, 122, 0.6);
   left: 0;
   margin: 0;
   position: absolute;
